feat: :sparkles: Header con productos completo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CampusShop</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+    <header>
+        <ul>
+            <li><a href="#">Producto 1</a></li>
+            <li><a href="#">Producto 2</a></li>
+            <li><a href="#">Producto 3</a></li>
+            <li><a href="#">Producto 4</a></li>
+            <li><a href="#">Producto 5</a></li>
+            <li><a href="#">Producto 6</a></li>
+            <li><a href="#">Producto 7</a></li>
+            <li><a href="#">Producto 8</a></li>
+            <li><a href="#">Producto 9</a></li>
+            <li><a href="#">Producto 10</a></li>
+        </ul>
+    </header>
+    <main>
+        <div class="producto">
+            <div class="galeria">
+                <div class="imagen1"></div>
+                <div class="imagen2"></div>
+                <div class="imagen3"></div>
+                <div class="imagen4"></div>
+                <div class="imagen5"></div>
+            </div>
+            <div class="descripcion">
+                <h2>Nombre del producto</h2>
+                <div class="descripcionIconos">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis culpa ipsam debitis quod. Repudiandae dicta, ex asperiores beatae harum nihil minima ullam, magni deserunt vitae, quibusdam libero labore. Voluptate, deleniti.</p>
+                <precio>
+                    <p>$100.000</p><sub>$99.99</sub>
+                </precio>
+                <a href="">
+                    <button>Obtener</button>
+                </a>
+            </div>
+            
+        </div>
+ 
+    </main>
 </body>
 </html>
